--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,9 @@
 
 [env:bluepill_f103c8]
 platform = ststm32
+;board = bluepill_f103c6
 board = bluepill_f103c8_128k
+
 ; lib_deps = 
 ; 	khoih-prog/FlashStorage_STM32 @ ^1.1.0
 ; 	khoih-prog/FlashStorage_STM32 @ ~1.1.0
@@ -21,6 +23,7 @@ lib_extra_dirs =
 lib_deps = khoih-prog/FlashStorage_STM32F1@^1.0.1
 framework = cmsis
 upload_protocol = stlink
+upload_flags = -c set CPUTAPID 0x2ba01477
 debug_tool = stlink
 monitor_speed = 74880
 ;upload_port = /dev/tty.usbserial-A50285BI
